--- a/configure.in
+++ b/configure.in
@@ -1,8 +1,11 @@
 dnl Process this file with autoconf to produce a configure script.
+
 AC_INIT(src/main.c)
-AM_INIT_AUTOMAKE(ratpoison, 0.0.3)
+AM_INIT_AUTOMAKE(ratpoison, 0.0.4)
 
 AM_CONFIG_HEADER(src/config.h)
+
+AC_ARG_ENABLE(debug, [Turn on debugging information], AC_DEFINE(DEBUG))
 
 dnl Checks for programs.
 CFLAGS="$CFLAGS -Wall"
