fixed bug that lost focus of any window when the current window was unmapped. moved key strokes into a structure in actions.c along with all key stroke functi ons. added ability to ignore badwindow errors. fixed up unmap_notify function. w hen waiting for a keystroke after the prefix has been hit, pressing a modifier d oesn't count as a 'keystroke' and doesn't abort the current key combination bein g keyed

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -2,4 +2,4 @@ bin_PROGRAMS = ratpoison
 
 ratpoison_SOURCES = bar.c bar.h conf.h data.h events.c events.h	\
 input.c input.h list.c list.h main.c manage.c manage.h number.c	\
-number.h ratpoison.h
+number.h ratpoison.h actions.h actions.c
