--- a/src/config.h.in
+++ b/src/config.h.in
@@ -15,6 +15,9 @@
 /* When defined, ratpoison will print debugging information */
 #undef DEBUG
 
+/* X terminal emulator to user */
+#undef TERM_PROG
+
 /* Define if you have the <unistd.h> header file.  */
 #undef HAVE_UNISTD_H
 
