* communications.c (send_restart, send_kill): Added
* ratpoison.h: includes communications.h

* main.c (send_restart, send_kill): Moved to communications.c

* list.c (get_mouse_root_position): Added
(add_to_window_list): Initialize new rp_window fields
(save_mouse_position): Added
(set_active_window): Added code to save and restore the position
of the mouse

* events.c (property_notify): Added code to listen for a
WM_TRANSIENT_FOR property change.

* data.h (struct rp_window): Added transient, transient_for, mouse_x, mouse_y.

* actions.c (maximize_transient): Added
(maximize): Added code to handle transient windows differently

* Makefile.am (ratpoison_SOURCES): Added communications.h and communications.c

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -2,4 +2,5 @@ bin_PROGRAMS = ratpoison
 
 ratpoison_SOURCES = bar.c bar.h conf.h data.h events.c events.h		\
 input.c input.h list.c list.h main.c manage.c manage.h number.c		\
-number.h ratpoison.h actions.h actions.c getopt.c getopt1.c getopt.h
+number.h ratpoison.h actions.h actions.c getopt.c getopt1.c getopt.h	\
+communications.h communications.c
