--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,6 +1,29 @@
 bin_PROGRAMS = ratpoison
 
-ratpoison_SOURCES = bar.c bar.h conf.h data.h events.c events.h		\
-input.c input.h list.c list.h main.c manage.c manage.h number.c		\
-number.h ratpoison.h actions.h actions.c getopt.c getopt1.c getopt.h	\
-communications.h communications.c messages.h sbuf.c sbuf.h
+ratpoison_SOURCES = 			\
+		actions.c		\
+		actions.h		\
+		bar.c			\
+		bar.h			\
+		communications.c	\
+		communications.h	\
+		conf.h			\
+		data.h			\
+		events.c		\
+		events.h		\
+		getopt.c		\
+		getopt.h		\
+		getopt1.c		\
+		input.c			\
+		input.h			\
+		list.c			\
+		list.h			\
+		main.c			\
+		manage.c		\
+		manage.h		\
+		messages.h		\
+		number.c		\
+		number.h		\
+		ratpoison.h		\
+		sbuf.c			\
+		sbuf.h
