--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -17,7 +17,7 @@
 ## along with this program; if not, write to the Free Software
 ## Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA 02111-1307 USA
 ##
-## $Id: Makefile.am,v 1.8 2001/02/15 21:41:06 algernon Exp $
+## $Id: Makefile.am,v 1.9 2001/02/19 20:44:20 rcyeske Exp $
 
 bin_PROGRAMS		= ratpoison
 
@@ -46,4 +46,5 @@ ratpoison_SOURCES	= actions.c		\
 			number.h		\
 			ratpoison.h		\
 			sbuf.c			\
-			sbuf.h
+			sbuf.h			\
+			themes.h
