--- a/configure.in
+++ b/configure.in
@@ -17,7 +17,7 @@ dnl You should have received a copy of the GNU General Public License
 dnl along with this program; if not, write to the Free Software
 dnl Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA 02111-1307 USA
 dnl
-dnl $Id: configure.in,v 1.11 2001/02/18 23:01:17 sabetts Exp $
+dnl $Id: configure.in,v 1.12 2001/02/19 20:51:40 rcyeske Exp $
 
 AC_INIT(src/main.c)
 AM_INIT_AUTOMAKE(ratpoison, 0.0.6)
@@ -47,7 +47,7 @@ emacs_prog=$withval, emacs_prog="emacs")
 AC_DEFINE_UNQUOTED(EMACS_PROG,"$emacs_prog")
 
 dnl Checks for programs.
-CFLAGS="$CFLAGS -Wall"
+CFLAGS="$CFLAGS -Wall -g"
 AC_CHECK_TOOL(CC, gcc)
 AC_PROG_CC
 
