--- a/Makefile.am
+++ b/Makefile.am
@@ -17,7 +17,7 @@
 ## along with this program; if not, write to the Free Software
 ## Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA 02111-1307 USA
 ##
-## $Id: Makefile.am,v 1.5 2001/02/19 21:02:19 rcyeske Exp $
+## $Id: Makefile.am,v 1.6 2001/02/26 01:47:38 sabetts Exp $
 
 PACKAGE = @PACKAGE@
 VERSION = @VERSION@
@@ -27,7 +27,7 @@ MAINTAINERCLEANFILES	= Makefile.in aclocal.m4 \
 			config.guess config.h.in config.sub configure \
 			install-sh missing mkinstalldirs stamp-h.in
 
-SUBDIRS			= src doc
+SUBDIRS			= src doc man
 
 docdir			= $(datadir)/doc/$(PACKAGE)
 doc_DATA		= AUTHORS COPYING ChangeLog NEWS README
