--- a/configure.in
+++ b/configure.in
@@ -17,7 +17,7 @@ dnl You should have received a copy of the GNU General Public License
 dnl along with this program; if not, write to the Free Software
 dnl Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA 02111-1307 USA
 dnl
-dnl $Id: configure.in,v 1.15 2001/03/02 09:40:59 sabetts Exp $
+dnl $Id: configure.in,v 1.16 2001/03/02 10:04:05 sabetts Exp $
 
 AC_INIT(src/main.c)
 AM_INIT_AUTOMAKE(ratpoison, 0.0.6-cvs)
@@ -34,6 +34,7 @@ AC_ARG_ENABLE(debug,
 	[if test "x$enableval" != "xno"; then
 		AC_DEFINE_UNQUOTED(DEBUG, 1, Define this to enable debugging messages)
 	 	AC_MSG_RESULT(yes)
+		CFLAGS="$CFLAGS -g"
 	else
 		AC_MSG_RESULT(no)
 	fi],[AC_MSG_RESULT(no)])
@@ -43,7 +44,7 @@ term_prog=$withval, term_prog="xterm")
 AC_DEFINE_UNQUOTED(TERM_PROG,"$term_prog")
 
 dnl Checks for programs.
-CFLAGS="$CFLAGS -Wall -g"
+CFLAGS="$CFLAGS -Wall"
 AC_CHECK_TOOL(CC, gcc)
 AC_PROG_CC
 
