--- a/configure.in
+++ b/configure.in
@@ -17,10 +17,10 @@ dnl You should have received a copy of the GNU General Public License
 dnl along with this program; if not, write to the Free Software
 dnl Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA 02111-1307 USA
 dnl
-dnl $Id: configure.in,v 1.16 2001/03/02 10:04:05 sabetts Exp $
+dnl $Id: configure.in,v 1.17 2001/03/05 23:31:06 rcyeske Exp $
 
 AC_INIT(src/main.c)
-AM_INIT_AUTOMAKE(ratpoison, 0.0.6-cvs)
+AM_INIT_AUTOMAKE(ratpoison, 0.2.0-cvs)
 
 AM_CONFIG_HEADER(src/config.h)
 
