--- a/debian/control
+++ b/debian/control
@@ -2,12 +2,12 @@ Source: ratpoison
 Section: x11
 Priority: extra
 Maintainer: Gergely Nagy <8@free.bsd.hu>
-Build-Depends: debhelper (>= 2.0.89), xlibs-dev
+Build-Depends: debhelper (>= 2.0.89), xlibs-dev, x-terminal-emulator
 Standards-Version: 3.5.0
 
 Package: ratpoison
 Architecture: any
-Depends: ${shlibs:Depends}
+Depends: ${shlibs:Depends}, x-terminal-emulator
 Provides: x-window-manager
 Description: Simple window manager with no fat library dependencies.
  ratpoison is a simple Window Manager with no fat library
