--- a/debian/control
+++ b/debian/control
@@ -2,7 +2,7 @@ Source: ratpoison
 Section: x11
 Priority: extra
 Maintainer: Gergely Nagy <8@free.bsd.hu>
-Build-Depends: debhelper (>= 2.0.89), xlibs-dev
+Build-Depends: debhelper (>= 2.0.89), xlibs-dev | xlib6g-dev
 Standards-Version: 3.5.0
 
 Package: ratpoison
