--- a/debian/control
+++ b/debian/control
@@ -1,9 +1,9 @@
 Source: ratpoison
 Section: x11
 Priority: extra
-Maintainer: Gergely Nagy <8@free.bsd.hu>
+Maintainer: Gergely Nagy <algernon@debian.org>
 Build-Depends: debhelper (>= 2.0.89), xlibs-dev | xlib6g-dev
-Standards-Version: 3.5.0
+Standards-Version: 3.5.6
 
 Package: ratpoison
 Architecture: any
