--- a/debian/control
+++ b/debian/control
@@ -8,7 +8,7 @@ Standards-Version: 3.5.6
 Package: ratpoison
 Architecture: any
 Depends: ${shlibs:Depends}
-Recommends: xterm | x-terminal-emulator
+Recommends: xvt | x-terminal-emulator, ratmenu
 Provides: x-window-manager
 Description: Simple window manager with no fat library dependencies.
  ratpoison is a simple Window Manager with no fat library
