--- a/debian/control
+++ b/debian/control
@@ -1,7 +1,7 @@
 Source: ratpoison
 Section: x11
 Priority: extra
-Maintainer: Gergely Nagy and Jonathan Walther <algernon-krooger@people.debian.org>
+Maintainer: Gergely Nagy and Jonathan Walther <algernon-krooger@klecker.debian.org>
 Build-Depends: debhelper (>= 2.0.89), xlibs-dev | xlib6g-dev
 Standards-Version: 3.5.6
 Uploaders: Gergely Nagy <algernon@debian.org>, Jonathan Walther <krooger@debian.org>
