ratpoisonrc-mode.el is a thing of the past

--- a/doc/Makefile.am
+++ b/doc/Makefile.am
@@ -1,3 +1,3 @@
 info_TEXINFOS = ratpoison.texi
 man_MANS      = ratpoison.1
-EXTRA_DIST    = $(man_MANS) sample.ratpoisonrc ipaq.ratpoisonrc ratpoisonrc-mode.el
+EXTRA_DIST    = $(man_MANS) sample.ratpoisonrc ipaq.ratpoisonrc
