--- a/contrib/Makefile.am
+++ b/contrib/Makefile.am
@@ -1,2 +1,2 @@
-pkgdata_DATA = ratpoison.el split.sh
-EXTRA_DIST    = ratpoison.el split.sh
+pkgdata_DATA = ratpoison.el split.sh genrpbindings
+EXTRA_DIST    = ratpoison.el split.sh genrpbindings
