--- a/debian/rules
+++ b/debian/rules
@@ -4,7 +4,7 @@
 ##
 ## Released under the GNU GPL v2
 ##
-## $Id: rules,v 1.7 2001/05/03 15:03:57 algernon Exp $
+## $Id: rules,v 1.8 2001/12/08 23:26:31 algernon Exp $
 
 export DH_COMPAT  = 2
 DEBHELPER_OPTIONS = -p$@ -Pdebian/$(DEB_HOST_ARCH)/$@
@@ -31,8 +31,8 @@ build-deb/$(DEB_HOST_ARCH)/bootstrap-stamp:
 	touch $@
 
 # config - run configure
-config: bootstrap build-deb/$(DEB_HOST_ARCH)/config-stamp
-build-deb/$(DEB_HOST_ARCH)/config-stamp:
+config: bootstrap build-deb/$(DEB_HOST_ARCH)/config.status
+build-deb/$(DEB_HOST_ARCH)/config.status:
 	dh_testdir
 	cd build-deb/$(DEB_HOST_ARCH) && \
 	CFLAGS="$(CFLAGS)" ../../configure \
@@ -43,7 +43,6 @@ build-deb/$(DEB_HOST_ARCH)/config-stamp:
 			--build=$(DEB_BUILD_GNU_TYPE) \
 			--host=$(DEB_HOST_GNU_TYPE) \
 			$(CONFIG_FLAGS)
-	touch $@
 
 # build - build the package
 build: config build-deb/$(DEB_HOST_ARCH)/build-stamp
@@ -78,6 +77,7 @@ install: build
 		install DESTDIR=$(PWD)/debian/$(DEB_HOST_ARCH)/ratpoison
 	rm -f $(PWD)/debian/$(DEB_HOST_ARCH)/ratpoison/usr/share/doc/ratpoison/COPYING
 	rm -f $(PWD)/debian/$(DEB_HOST_ARCH)/ratpoison/usr/share/doc/ratpoison/ChangeLog
+	rm -rf $(PWD)/debian/$(DEB_HOST_ARCH)/ratpoison/usr/share/ratpoison
 
 # these build the various packages
 ratpoison: install
