--- a/configure.in
+++ b/configure.in
@@ -17,7 +17,7 @@ dnl You should have received a copy of the GNU General Public License
 dnl along with this program; if not, write to the Free Software
 dnl Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA 02111-1307 USA
 dnl
-dnl $Id: configure.in,v 1.23 2001/09/16 09:58:24 sabetts Exp $
+dnl $Id: configure.in,v 1.24 2002/01/08 19:13:06 algernon Exp $
 
 AC_INIT(src/main.c)
 AM_INIT_AUTOMAKE(ratpoison, 1.0.1-cvs)
@@ -74,7 +74,7 @@ AC_CHECK_HEADERS(unistd.h)
 dnl Checks for typedefs, structures, and compiler characteristics.
 
 dnl Checks for library functions.
-AC_CHECK_FUNCS(getopt getopt_long setsid setpgid setpgrp)
+AC_CHECK_FUNCS(getopt getopt_long setsid setpgid setpgrp setenv unsetenv)
 AC_TYPE_SIGNAL
 
 AC_OUTPUT(Makefile doc/Makefile src/Makefile contrib/Makefile)
