--- a/configure.in
+++ b/configure.in
@@ -17,7 +17,7 @@ dnl You should have received a copy of the GNU General Public License
 dnl along with this program; if not, write to the Free Software
 dnl Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA 02111-1307 USA
 dnl
-dnl $Id: configure.in,v 1.25 2002/01/27 00:57:19 sabetts Exp $
+dnl $Id: configure.in,v 1.26 2002/02/14 11:21:29 sabetts Exp $
 
 AC_INIT(src/main.c)
 AM_INIT_AUTOMAKE(ratpoison, 1.0.1-cvs)
@@ -30,7 +30,7 @@ AC_SUBST(host_os)
 dnl by default turn off debugging
 AC_MSG_CHECKING(whether to enable debugging)
 AC_ARG_ENABLE(debug,
-	[  --enable-debugging      build with extra debugging messages],
+	[  --enable-debug          build with extra debugging messages],
 	[if test "x$enableval" != "xno"; then
 		AC_DEFINE_UNQUOTED(DEBUG, 1, Define this to enable debugging messages)
 	 	AC_MSG_RESULT(yes)
