--- a/configure.in
+++ b/configure.in
@@ -17,10 +17,10 @@ dnl You should have received a copy of the GNU General Public License
 dnl along with this program; if not, write to the Free Software
 dnl Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA 02111-1307 USA
 dnl
-dnl $Id: configure.in,v 1.27 2002/03/10 20:29:55 sabetts Exp $
+dnl $Id: configure.in,v 1.28 2002/03/10 20:30:58 sabetts Exp $
 
 AC_INIT(src/main.c)
-AM_INIT_AUTOMAKE(ratpoison, 1.1.0)
+AM_INIT_AUTOMAKE(ratpoison, 1.2.0-cvs)
 
 AM_CONFIG_HEADER(src/config.h)
 
