--- a/configure.in
+++ b/configure.in
@@ -17,7 +17,7 @@ dnl You should have received a copy of the GNU General Public License
 dnl along with this program; if not, write to the Free Software
 dnl Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA 02111-1307 USA
 dnl
-dnl $Id: configure.in,v 1.30 2002/03/10 20:42:55 sabetts Exp $
+dnl $Id: configure.in,v 1.31 2002/11/20 09:29:37 sabetts Exp $
 
 AC_INIT(src/main.c)
 AM_INIT_AUTOMAKE(ratpoison, 1.2.0-cvs)
@@ -44,9 +44,24 @@ term_prog=$withval, term_prog="xterm")
 AC_DEFINE_UNQUOTED(TERM_PROG,"$term_prog")
 
 dnl Checks for programs.
-CFLAGS="$CFLAGS -Wall -O2"
 AC_CHECK_TOOL(CC, gcc)
 AC_PROG_CC
+
+if test "x$CC" = "xgcc"; then
+	CFLAGS="$CFLAGS -Wall -O2"
+fi
+
+dnl Check for vararg macros (some preprocessors don't have variable argument macros)
+AC_PROG_CPP
+AC_MSG_CHECKING(for vararg macros)
+AC_TRY_CPP([
+#define VARARGS(first, more...) foo(first, ## more)
+VARARGS(bar, gazonk)
+VARARGS(bar, gazonk, blahonga)
+], AC_DEFINE_UNQUOTED(HAVE_VARARG_MACROS, "1", The c preprocessor has support for vararg macros) AC_MSG_RESULT(yes),
+AC_MSG_RESULT(no))
+
+
 
 dnl check for an x terminal emulator
 AC_MSG_CHECKING(terminal emulator)
